# LifeTime

./: .gitignore  docker-compose.yml
backend/: .env.example  TODO.md  alembic.ini  docker-compose-local.yml  pyproject.toml
backend/docker/local/: Dockerfile  entrypoint.sh
backend/src/: main.py  run_worker.py  worker.py
backend/src/config/: __init__.py  constants.py  settings.py
backend/src/database/: orm.py  session.py
backend/src/database/migrations/versions/: 2bd273a32b97_add_role_to_user_model.py  7ed5d09eda72_initial_migration.py  9306b3f88e7b_add_is_initial_field_to_tariff_model.py
backend/src/database/models/: __init__.py  link.py  tariff.py  user.py
backend/src/jwt-certs/: jwt-private.pem  jwt-public.pem
backend/src/lib/: s3.py
backend/src/modules/auth/: resolver.py  schema.py  service.py
backend/src/modules/auth/guards/: role_required.py
backend/src/modules/auth/strategies/: token.py
backend/src/modules/contact/: schema.py  service.py
backend/src/modules/link/: resolver.py  schema.py  service.py  tasks.py
backend/src/modules/link/strategies/: check.py  schema.py
backend/src/modules/project/: resolver.py  schema.py  service.py
backend/src/modules/tariff/: resolver.py  schema.py  service.py
backend/src/modules/user/: resolver.py  schema.py  service.py
backend/src/utils/: normalize.py
backend/tests/: conftest.py
backend/tests/modules/link/strategies/: test_check.py  test_schema.py
backend/tests/modules/project/: test_project_service.py
frontend/: .env.example  .prettierrc  TODO.md  docker-compose-local.yml  package.json  (+1 more)
(+185 files in other folders)
