[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiobotocore>=2.21",
    "aiohttp>=3.11",
    "alembic>=1.18.4",
    "arq>=0.26",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "cryptography>=46.0.5",
    "fastapi[all]>=0.129.0",
    "pyjwt>=2.11.0",
    "sqlalchemy>=2.0.46",
]

[tool.setuptools.packages.find]
where = ["backend/src"]
include = ["*"]

[tool.pytest.ini_options]
pythonpath = ["backend/src"]

[tool.mypy]
mypy_path = ["backend/src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.optional-dependencies]
dev = ["watchfiles"]
